Updated RPA models

--- a/rpa-model/mk2-blowdown-film-cooled.cfg
+++ b/rpa-model/mk2-blowdown-film-cooled.cfg
@@ -42,7 +42,7 @@ propellant :
   {
     ratio : 
     {
-      value = 1.473;
+      value = 1.932;
       unit = "O/F";
     };
     oxidizer = ( 
@@ -117,8 +117,57 @@ chamberCooling :
     };
     wallLayerHeight = 0.025;
   };
-  chamberCoolingSections = ( );
-  filmSlots = ( );
+  chamberCoolingSections = ( 
+    {
+      radiationCooling : 
+      {
+        location : 
+        {
+          value = 0.0;
+          unit = "mm";
+        };
+        length : 
+        {
+          value = 0.0;
+          unit = "m";
+        };
+        wallThickness : 
+        {
+          value = 0.125;
+          unit = "in";
+        };
+        wallConductivity : 
+        {
+          value = 16.0;
+          unit = "W/(m K)";
+        };
+        coldSideWallSurfaceEmissivity = 0.75;
+      };
+    } );
+  filmSlots = ( 
+    {
+      location : 
+      {
+        value = 0.0;
+        unit = "mm";
+      };
+      coolant = ( 
+        {
+          name = "C2H5OH(L)";
+          massFraction = 1.0;
+          T : 
+          {
+            value = 110.0;
+            unit = "F";
+          };
+          p : 
+          {
+            value = 500.0;
+            unit = "psi";
+          };
+        } );
+      flowrate = 0.15;
+    } );
 };
 propelantFeedSystem : 
 {
